<?xml version="1.0"?>
<package>
  <name>visnav</name>
  <version>0.1.0</version>
  <description>Package containing visual navigation for the solo drone </description>

  <maintainer email="lsi@ffi.no">Aleksander Skjerlie Simonsen</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>mavros_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>

  <export>

  </export>
</package>